force-app/main/default/objects/WhatsApp_Message__c/fields/API_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>API_Error_Message__c</fullName>
    <label>API Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>