force-app/main/default/objects/WhatsApp_Message__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>