force-app/main/default/objects/WhatsApp_Message__c/fields/Contains_File__c.field-meta.xml
<CustomField>
    <fullName>Contains_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains File</label>
    <type>Checkbox</type>
</CustomField>