force-app/main/default/objects/WhatsApp_Message__c/fields/Interactive__c.field-meta.xml
<CustomField>
    <fullName>Interactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactive</label>
    <type>Checkbox</type>
</CustomField>