force-app/main/default/objects/WhatsApp_Message__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>