force-app/main/default/objects/WhatsApp_Message__c/fields/Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Message_Status__c</fullName>
    <label>Message Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>enqueued</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>read</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>