force-app/main/default/objects/WhatsApp_Message__c/fields/Number_Changed__c.field-meta.xml
<CustomField>
    <fullName>Number_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Number Changed</label>
    <type>Checkbox</type>
</CustomField>