force-app/main/default/objects/WhatsApp_Message__c/fields/Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Link__c</fullName>
    <label>Public Link</label>
    <type>Url</type>
</CustomField>