force-app/main/default/objects/WhatsApp_Message__c/fields/Quick_Replies__c.field-meta.xml
<CustomField>
    <fullName>Quick_Replies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Replies</label>
    <type>Checkbox</type>
</CustomField>