force-app/main/default/objects/WhatsApp_Message__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>