force-app/main/default/objects/WhatsApp_Message__c/fields/Reply2__c.field-meta.xml
<CustomField>
    <fullName>Reply2__c</fullName>
    <label>Reply2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>