force-app/main/default/objects/WhatsApp_Message__c/fields/Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Visit</label>
    <referenceTo>Site_Visit__c</referenceTo>
    <relationshipLabel>WhatsApp Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>