force-app/main/default/objects/WhatsApp_Message__c/fields/Title_1__c.field-meta.xml
<CustomField>
    <fullName>Title_1__c</fullName>
    <label>Title 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>