force-app/main/default/objects/WhatsApp_Message__c/fields/Title_2__c.field-meta.xml
<CustomField>
    <fullName>Title_2__c</fullName>
    <label>Title 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>