force-app/main/default/objects/WhatsApp_Message__c/listViews/All_Messages.listView-meta.xml
<ListView>
    <fullName>All_Messages</fullName>
    <columns>NAME</columns>
    <columns>Customer_Phone__c</columns>
    <columns>API_Request__c</columns>
    <columns>API_Response__c</columns>
    <columns>API_Status__c</columns>
    <columns>Outbound__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Messages</label>
</ListView>